--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -9,11 +9,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          stable: 'false'
-          go-version: '1.20'
+          stable: "false"
+          go-version: "1.20.1"
 
       - name: Lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.51.2
 
           golangci-lint run  -c .golangci.yml
+      - name: Test
+        run: go test C:\Users\Louis\Desktop\scrape\readfile
