--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -9,24 +9,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          stable: "false"
-          go-version: "1.20.1"
-
+          go-version: "1.20"
+      - name: coverage
+        run : CGO_ENABLED=1 go test ./... -race -covermode=atomic -coverprofile=coverage.out
+      - name: Upload coverage
+        uses: codecov/codecov-action@v3
       - name: Lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.51.2
 
           golangci-lint run  -c .golangci.yml
-      
-      - name: test coverage
-        run: |
-          go test -coverprofile=coverage.out ./...
-          go tool cover -func=coverage.out
-          go tool cover -html=coverage.out -o=coverage.html
-      
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        
-      
