--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -11,8 +11,8 @@ jobs:
         with:
           go-version: "1.20"
 
-      - name: Lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.51.2
+      # - name: Lint
+      #   run: |
+      #     curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.51.2
 
-          golangci-lint run  -c .golangci.yml
+      #     golangci-lint run  -c .golangci.yml
